--- a/expense-tracker-backend/tsconfig.json
+++ b/expense-tracker-backend/tsconfig.json
@@ -1,14 +1,16 @@
 {
   "compilerOptions": {
-    "target": "ES6",
+    "target": "ES2020", // ← better for async/await & modern JS
+    "lib": ["ES2020"], // ← fix for `.includes()` and more
     "module": "CommonJS",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "outDir": "./dist",
+    "rootDir": "./src", // ← recommended to match file layout
     "baseUrl": "./src"
   },
-  "include": ["src/**/*"],
+  "include": ["src"],
   "exclude": ["node_modules", "dist"]
 }
